Fixed grid gap property

--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -46,10 +46,9 @@
 .project-container-gallery
   display: grid
   grid-template-columns: repeat(auto-fit, minmax(12rem, 18rem))
-  //grid-template-columns: repeat(auto-fit, 20rem)
   justify-content: center
-  grid-gap:10px
-  //padding: 30px
+  grid-column-gap: 10px
+  grid-row-gap: 10px
   margin: 10px
   .project-unit-gallery
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
@@ -82,10 +81,4 @@
         font:
           size: 24px
           weight: 300
-
-/*@media (max-width: 768px)
-  .project-container-gallery
-    max-width: 100vw
-    .project-unit-gallery
-      width: 70vw
-      height: 70vw*/
+          
